--- a/assignstyle.css
+++ b/assignstyle.css
@@ -42,6 +42,11 @@ p{  font-size: 14px;}
 .banner{
     display: flex;
 }
+.full-width{
+    width: 100;
+    padding-left: 15px;
+    padding-top: 5px;
+}
 .half-width{
     width: 50%;
     padding-left: 15px;
